Fix post layout issue with subtitle-less pages

--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -71,6 +71,7 @@ pre
 #post_container
   position: relative
   left: $fixed_column_width + 20
+  text-align: left
   +col
 
 .category_layout, .search_layout
